--- a/MOM/08-05-2025.md
+++ b/MOM/08-05-2025.md
@@ -20,3 +20,8 @@
 |Team Leader| Sinchan KN|
 |Team Vice-Leader| Vaishnav|
 
+### 2:30 - 3:30 PM
+
+1. Recreational Activities.
+2. Learn github basics (Huzaifa)
+
