--- a/MOM/08-05-2025.md
+++ b/MOM/08-05-2025.md
@@ -22,6 +22,6 @@
 
 ### 2:30 - 3:30 PM
 
-1. Recreational Activities.
-2. Learn github basics (Huzaifa)
+### Task Assigned
 
+1. Go through the rule book. Come out with a solution to the problem (Deadline: 09/08/2025 - 6 PM)
