--- a/MOM/08-05-2025.md
+++ b/MOM/08-05-2025.md
@@ -25,3 +25,9 @@
 ### Task Assigned
 
 1. Go through the rule book. Come out with a solution to the problem (Deadline: 09/08/2025 - 6 PM)
+
+### 9:00 - 
+
+1. Github walkthrough
+
+###
