--- a/MOM/08-05-2025.md
+++ b/MOM/08-05-2025.md
@@ -22,6 +22,16 @@
 
 ### 2:30 - 3:30 PM
 
-### Task Assigned
+#### Task Assigned
 
 1. Go through the rule book. Come out with a solution to the problem (Deadline: 09/08/2025 - 6 PM)
+
+### 9:00-
+
+#### Challenges while building the drone 
+
+1. Communication Range 
+2. Business proposal
+3. Autonomy 
+4. Image processing 
+5. Building 2 drones that actually will fly (Biggest challenge).
