--- a/MOM/08-05-2025.md
+++ b/MOM/08-05-2025.md
@@ -29,9 +29,21 @@
 ### 9:00 - 
 
 1. Github walkthrough
+2. Challenges:
+| Challenge | Solution |
+| --- | --- |
+| Communication b/w Ground station and drones| 
+| Autonomy | very simple to build |
+|image processing: readily available codes | 
+| Business pitching idea |
+| Geotagging: Very simple algorithm |  
+4. Biggest challenge: Building the 2 drones & setting the autonomy of the drone.
+5. No design report required --> No justification required.
+6. Difference b/w quadcopter v/s fixed wing
 
 ### Task Assigned
 
 | Task | Deadline |
 | ----- | ---- |
 | Learn GIthub basic | 09/05/2025 |
+| 
